WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179098
REGRESSION(
r224192
): [WPE] Fix WebEventFactory::createWebWheelEvent
https://bugs.webkit.org/show_bug.cgi?id=179098
Summary
REGRESSION(r224192): [WPE] Fix WebEventFactory::createWebWheelEvent
Michael Catanzaro
Reported
2017-10-31 18:09:20 PDT
../../Source/WebKit/Shared/wpe/WebEventFactory.cpp:159:15: warning: this statement may fall through [-Wimplicit-fallthrough=] delta = wheelTicks; ~~~~~~^~~~~~~~~~~~ ../../Source/WebKit/Shared/wpe/WebEventFactory.cpp:160:5: note: here default: ^~~~~~~
Attachments
Patch
(1.30 KB, patch)
2017-10-31 18:26 PDT
,
Michael Catanzaro
sam
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews122 for ios-simulator-wk2
(1007.67 KB, application/zip)
2017-10-31 19:38 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-10-31 18:25:46 PDT
Ooops, this is my fault.
Michael Catanzaro
Comment 2
2017-10-31 18:26:18 PDT
Created
attachment 325535
[details]
Patch
Build Bot
Comment 3
2017-10-31 19:38:06 PDT
Comment on
attachment 325535
[details]
Patch
Attachment 325535
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/5058141
New failing tests: imported/w3c/web-platform-tests/service-workers/cache-storage/serviceworker/cache-match.https.html
Build Bot
Comment 4
2017-10-31 19:38:07 PDT
Created
attachment 325539
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
Michael Catanzaro
Comment 5
2017-11-01 05:21:11 PDT
Committed
r224274
: <
https://trac.webkit.org/changeset/224274
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug