REGRESSION(r224192): [WPE] Fix WebEventFactory::createWebWheelEvent https://bugs.webkit.org/show_bug.cgi?id=179098

Reviewed by Sam Weinig.

* Shared/wpe/WebEventFactory.cpp:
(WebKit::WebEventFactory::createWebWheelEvent):

Canonical link: https://commits.webkit.org/195225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224274 268f45cc-cd09-0410-ab3c-d52691b4dbfc